--- a/site/src/pages/community.astro
+++ b/site/src/pages/community.astro
@@ -50,7 +50,7 @@ const DISCUSSIONS = "https://github.com/MelissaSkywalkz/open-data-orbit/discussi
 
       <div class="mini mono" aria-label="Channels">
         <span class="mini-pill">QUESTIONS</span>
-        <span class="mini-pill">SHOW &amp; TELL</span>
+        <span class="mini-pill">SHOW & TELL</span>
         <span class="mini-pill">REQUESTS</span>
       </div>
     </article>
@@ -77,7 +77,7 @@ const DISCUSSIONS = "https://github.com/MelissaSkywalkz/open-data-orbit/discussi
 
     <article class="card community-card community-cta">
       <div class="cta-top">
-        <h2>Badges &amp; Rewards</h2>
+        <h2>Badges & Rewards</h2>
         <span class="cta-tag mono">PROGRESSION</span>
       </div>
 
